evaluator/arhiva/Adunare/errors/753.error
/eval-folder/753.cpp: In function 'int main()':
/eval-folder/753.cpp:9:1: error: expected ';' before '}' token
 }
 ^
